<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>CompressPage</class>
 <widget class="QScrollArea" name="CompressPage">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>900</width>
    <height>750</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Compress XML</string>
  </property>
  <property name="widgetResizable">
   <bool>true</bool>
  </property>
  <widget class="QWidget" name="scrollAreaWidgetContents">
   <layout class="QVBoxLayout" name="verticalLayout">
    <property name="spacing">
     <number>15</number>
    </property>
    <property name="leftMargin">
     <number>30</number>
    </property>
    <property name="topMargin">
     <number>30</number>
    </property>
    <property name="rightMargin">
     <number>30</number>
    </property>
    <property name="bottomMargin">
     <number>30</number>
    </property>
    
<item alignment="Qt::AlignLeft"> 
     <widget class="QPushButton" name="backButton">
      <property name="font">
       <font>
        <pointsize>10</pointsize>
       </font>
      </property>
      <property name="styleSheet">
       <string notr="true">
        /* Match the flat, text-focused style with black text */
        QPushButton {
         border: none;
         background-color: transparent;
         /* Set color to black */
         color: black; 
         padding: 5px;
         text-align: left; /* Text alignment inside button */
        }
        QPushButton:hover {
         text-decoration: underline;
        }
       </string>
      </property>
      <property name="text">
       <string>‚Üê Back to Operations</string>
      </property>
     </widget>
    </item>
    
    <item>
     <widget class="QWidget" name="headerWidget">
      <property name="minimumSize">
       <size>
        <width>0</width>
        <height>80</height>
       </size>
      </property>
      <property name="styleSheet">
       <string notr="true">background-color: #F84968; border-radius: 10px; color: white;</string>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_header">
       <item>
        <widget class="QLabel" name="iconLabel">
         <property name="text">
          <string>üíæ</string>
         </property>
         <property name="font">
          <font>
           <pointsize>24</pointsize>
          </font>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
         </property>
        </widget>
       </item>
       <item>
        <layout class="QVBoxLayout" name="verticalLayout_title">
         <item>
          <widget class="QLabel" name="titleLabel">
           <property name="font">
            <font>
             <pointsize>16</pointsize>
             <weight>75</weight>
             <bold>true</bold>
            </font>
           </property>
           <property name="text">
            <string>Compress XML</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QLabel" name="subtitleLabel">
           <property name="text">
            <string>Compressing XML file using Byte Pair Encoding</string>
           </property>
          </widget>
         </item>
        </layout>
       </item>
       <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
           <width>40</width>
           <height>20</height>
          </size>
         </property>
        </spacer>
       </item>
      </layout>
     </widget>
    </item>
    
    <item>
     <widget class="QLabel" name="inputLabel">
      <property name="font">
       <font>
        <weight>75</weight>
        <bold>false</bold>
       </font>
      </property>
      <property name="styleSheet">
       <string notr="true">color: black;</string>
      </property>
      <property name="text">
       <string>Input XML File</string>
      </property>
     </widget>
    </item>
    
    <item>
     <widget class="QPushButton" name="browseButton">
      <property name="minimumSize">
       <size>
        <width>0</width>
        <height>40</height>
       </size>
      </property>
      <property name="styleSheet">
       <string notr="true">background-color: #FEE; color: #F84968; border: 1px solid #F84968; border-radius: 5px;</string>
      </property>
      <property name="text">
       <string>‚¨ÜÔ∏è Browse XML File</string>
      </property>
     </widget>
    </item>
    
    <item>
     <widget class="QLabel" name="orSeparator">
      <property name="text">
       <string>OR</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </item>
    
    <item>
     <widget class="QTextEdit" name="inputTextEdit">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
        <horstretch>0</horstretch>
        <verstretch>1</verstretch>
       </sizepolicy>
      </property>
      <property name="minimumHeight">
       <number>150</number>
      </property>
      <property name="styleSheet">
       <string notr="true">
        color: black;
        /* Style the placeholder text color */
        QTextEdit::placeholder {
            color: #F84968; /* Use the theme color for the placeholder */
        }
       </string>
      </property>
      <property name="placeholderText">
       <string>Paste your XML content here...</string>
      </property>
     </widget>
    </item>
    
    <item>
     <widget class="QPushButton" name="minifyButton">
      <property name="minimumSize">
       <size>
        <width>0</width>
        <height>50</height>
       </size>
      </property>
      <property name="font">
       <font>
        <pointsize>12</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
      </property>
      <property name="styleSheet">
       <string notr="true">background-color: #F84968; color: white; border-radius: 8px;</string>
      </property>
      <property name="text">
       <string>üíæ Compress XML</string>
      </property>
     </widget>
    </item>
    
    <item>
     <widget class="QLabel" name="outputLabel">
      <property name="font">
       <font>
        <weight>75</weight>
        <bold>true</bold>
       </font>
      </property>
      <property name="text">
       <string>Compressed Output:</string>
      </property>
      <property name="visible">
       <bool>false</bool>
      </property>
      <property name="styleSheet">
       <string notr="true">color: black;</string>
      </property>
     </widget>
    </item>
    
    <item>
     <widget class="QTextEdit" name="outputTextEdit">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
        <horstretch>0</horstretch>
        <verstretch>1</verstretch>
       </sizepolicy>
      </property>
      <property name="visible">
       <bool>false</bool>
      </property>
      <property name="minimumHeight">
       <number>150</number>
      </property>
      <property name="readOnly">
       <bool>true</bool>
      </property>
      <property name="styleSheet">
       <string notr="true">color: black;</string>
      </property>
     </widget>
    </item>
    
    <item>
     <widget class="QWidget" name="statsContainer">
      <property name="visible">
       <bool>false</bool>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_stats">
       <property name="spacing">
        <number>10</number>
       </property>
       
       <item>
        <widget class="QWidget" name="originalSizeBox">
         <property name="styleSheet">
          <string notr="true">background-color: #EEE; border-radius: 8px; padding: 10px; border: 1px solid #CCC; color: black;</string>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_original">
          <item>
           <widget class="QLabel" name="label_original">
            <property name="text">
             <string>Original Size</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="originalSizeLabel">
            <property name="font">
             <font>
              <pointsize>12</pointsize>
              <weight>75</weight>
              <bold>true</bold>
             </font>
            </property>
            <property name="text">
             <string>0 bytes</string>
            </property>
           </widget>
          </item>
         </layout>
        </widget>
       </item>
       
       <item>
        <widget class="QWidget" name="compressedSizeBox">
         <property name="styleSheet">
          <string notr="true">background-color: #EEE; border-radius: 8px; padding: 10px; border: 1px solid #CCC; color: black;</string>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_compressed">
          <item>
           <widget class="QLabel" name="label_compressed">
            <property name="text">
             <string>Compressed Size</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="compressedSizeLabel">
            <property name="font">
             <font>
              <pointsize>12</pointsize>
              <weight>75</weight>
              <bold>true</bold>
             </font>
            </property>
            <property name="text">
             <string>0 bytes</string>
            </property>
           </widget>
          </item>
         </layout>
        </widget>
       </item>
       
       <item>
        <widget class="QWidget" name="reductionRatioBox">
         <property name="styleSheet">
          <string notr="true">background-color: #EEE; border-radius: 8px; padding: 10px; border: 1px solid #CCC; color: black;</string>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_reduction">
          <item>
           <widget class="QLabel" name="label_reduction">
            <property name="text">
             <string>Reduction Ratio</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="reductionLabel">
            <property name="font">
             <font>
              <pointsize>12</pointsize>
              <weight>75</weight>
              <bold>true</bold>
             </font>
            </property>
            <property name="text">
             <string>0.00%</string>
            </property>
           </widget>
          </item>
         </layout>
        </widget>
       </item>
      </layout>
     </widget>
    </item>
    
    <item>
     <widget class="QPushButton" name="downloadButton">
      <property name="minimumSize">
       <size>
        <width>0</width>
        <height>50</height>
       </size>
      </property>
      <property name="font">
       <font>
        <pointsize>12</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
      </property>
      <property name="styleSheet">
       <string notr="true">background-color: #F84968; color: white; border-radius: 8px;</string>
      </property>
      <property name="text">
       <string>‚¨áÔ∏è Download Compressed XML</string>
      </property>
      <property name="visible">
       <bool>false</bool>
      </property>
     </widget>
    </item>
    
    <item>
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
        <height>40</height>
       </size>
      </property>
     </spacer>
    </item>
    
   </layout>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>